@@ -1,3 +1,9 @@
+2001-05-14  Adam Fedor  <fedor@gnu.org>
+
+	* Headers/gnustep/base/objc-gnu2next.h: Add apply_t prototype.
+	* Source/objc-gnu2next.m: Include stdio.h.
+	* Source/GSFormat.m: Don't compare LONG_LONG_MAX if not defined
+
 2001-05-15  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSString.m: ([stringByDeletingPathExtension]) rewrite to
